--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "superUser": "node src/helpers/populate/admin.js"
   },
   "keywords": [],
-  "author": "Caussz",
+  "author": "jonatasperaza",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.22.0",
