--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "prepare": "npx prisma generate --schema=./src/database/prisma/schema.prisma && npx prisma migrate dev --schema=./src/database/prisma/schema.prisma",
+    "prepare": "npx prisma generate --schema=./src/database/prisma/schema.prisma && npx prisma migrate dev --schema=./src/database/prisma/schema.prisma && node ./swagger.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "superUser": "node src/helpers/populate/admin.js",
